关于PO提交、后台功能梳理

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -28,33 +28,70 @@
                 <li class="layui-nav-item">
                     <a class="" href="javascript:;">系统管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="11" menuurl='<iframe src="/crmUser/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户管理</a></dd>
+                        <dd><a href="javascript:;" menuid="100" menuurl='<iframe src="/crmUser/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户管理</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">基础信息</a>
+                    <a href="javascript:;">参展信息</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="22" menuurl='<iframe src="/herdsmen/list" width="100%" height="440px;" frameborder="0"></iframe>'>牧户查询</a></dd>
-                        <dd><a href="javascript:;" menuid="33" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>芯片查询</a></dd>
+                        <dd><a href="javascript:;" menuid="200" menuurl='<iframe src="/herdsmen/list" width="100%" height="440px;" frameborder="0"></iframe>'>专业观众</a></dd>
+                        <dd><a href="javascript:;" menuid="201" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>参展商</a></dd>
+                        <dd><a href="javascript:;" menuid="202" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>专业嘉宾</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">免疫查询</a>
+                    <a href="javascript:;">推荐设置</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="44" menuurl='<iframe src="/immunity/list" width="100%" height="440px;" frameborder="0"></iframe>'>免疫追溯</a></dd>
-                        <dd><a href="javascript:;" menuid="55" menuurl='<iframe src="/diagnosis/list" width="100%" height="440px;" frameborder="0"></iframe>'>诊疗信息</a></dd>
-                        <dd><a href="javascript:;" menuid="66" menuurl='<iframe src="/disinfect/list" width="100%" height="440px;" frameborder="0"></iframe>'>消毒信息</a></dd>
-                        <dd><a href="javascript:;" menuid="77" menuurl='<iframe src="/breed/list" width="100%" height="440px;" frameborder="0"></iframe>'>繁育信息</a></dd>
-                        <dd><a href="javascript:;" menuid="88" menuurl='<iframe src="/deworming/list" width="100%" height="440px;" frameborder="0"></iframe>'>驱虫信息</a></dd>
+                        <dd><a href="javascript:;" menuid="300" menuurl='<iframe src="/herdsmen/list" width="100%" height="440px;" frameborder="0"></iframe>'>标签管理</a></dd>
+                        <dd><a href="javascript:;" menuid="301" menuurl='<iframe src="/herdsmen/list" width="100%" height="440px;" frameborder="0"></iframe>'>热搜词管理</a></dd>
+                        <dd><a href="javascript:;" menuid="302" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>虚拟展厅推荐</a></dd>
+                        <dd><a href="javascript:;" menuid="303" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>行业资讯推荐</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">统计报表</a>
+                    <a href="javascript:;">banner管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="99" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>地域统计</a></dd>
-                        <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>时间统计</a></dd>
-                        <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>牧户统计</a></dd>
-                        <dd><a href="javascript:;" menuid="1212" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>药品统计</a></dd>
+                        <dd><a href="javascript:;" menuid="400" menuurl='<iframe src="/immunity/list" width="100%" height="440px;" frameborder="0"></iframe>'>首页banner管理</a></dd>
+                        <dd><a href="javascript:;" menuid="55" menuurl='<iframe src="/diagnosis/list" width="100%" height="440px;" frameborder="0"></iframe>'>入口banner管理</a></dd>
+                        <dd><a href="javascript:;" menuid="66" menuurl='<iframe src="/disinfect/list" width="100%" height="440px;" frameborder="0"></iframe>'>招展预告</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">关于我们</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;" menuid="500" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户协议</a></dd>
+                        <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>社区规范</a></dd>
+                        <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>隐私条款</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">资料管理</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;" menuid="600" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>认证提示</a></dd>
+                        <dd><a href="javascript:;" menuid="99" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户协议</a></dd>
+                        <dd><a href="javascript:;" menuid="99" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>展会中英文邀请函</a></dd>
+                        <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>参展合约</a></dd>
+                        <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>参展商手册</a></dd>
+                        <dd><a href="javascript:;" menuid="1212" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>搭建商手册</a></dd>
+                        <dd><a href="javascript:;" menuid="1212" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>团体观众登记表</a></dd>
+                        <dd><a href="javascript:;" menuid="1212" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>观众邀请券</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">关于展览会</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;" menuid="700" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>展会介绍</a></dd>
+                        <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>展会日程</a></dd>
+                        <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>交通住宿</a></dd>
+                        <dd><a href="javascript:;" menuid="1212" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>主办方信息</a></dd>
+                    </dl>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;">帮助与反馈</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;" menuid="800" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>意见反馈</a></dd>
+                        <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>常见问题</a></dd>
+                        <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>更多问题</a></dd>
                     </dl>
                 </li>
             </ul>
