--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -34,16 +34,16 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;">参展信息</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="200" menuurl='<iframe src="/herdsmen/list" width="100%" height="440px;" frameborder="0"></iframe>'>专业观众</a></dd>
-                        <dd><a href="javascript:;" menuid="201" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>参展商</a></dd>
-                        <dd><a href="javascript:;" menuid="202" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>专业嘉宾</a></dd>
+                        <dd><a href="javascript:;" menuid="200" menuurl='<iframe src="/platform/czrInfo/list" width="100%" height="440px;" frameborder="0"></iframe>'>专业观众</a></dd>
+                        <dd><a href="javascript:;" menuid="201" menuurl='<iframe src="/platform/zsInfo/list" width="100%" height="440px;" frameborder="0"></iframe>'>参展商</a></dd>
+                        <dd><a href="javascript:;" menuid="202" menuurl='<iframe src="/platform/guest/list" width="100%" height="440px;" frameborder="0"></iframe>'>专业嘉宾</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;">推荐设置</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="300" menuurl='<iframe src="/herdsmen/list" width="100%" height="440px;" frameborder="0"></iframe>'>标签管理</a></dd>
-                        <dd><a href="javascript:;" menuid="301" menuurl='<iframe src="/herdsmen/list" width="100%" height="440px;" frameborder="0"></iframe>'>热搜词管理</a></dd>
+                        <dd><a href="javascript:;" menuid="300" menuurl='<iframe src="/platform/label/list" width="100%" height="440px;" frameborder="0"></iframe>'>标签管理</a></dd>
+                        <dd><a href="javascript:;" menuid="301" menuurl='<iframe src="/platform/hottitle/list" width="100%" height="440px;" frameborder="0"></iframe>'>热搜词管理</a></dd>
                         <dd><a href="javascript:;" menuid="302" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>虚拟展厅推荐</a></dd>
                         <dd><a href="javascript:;" menuid="303" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>行业资讯推荐</a></dd>
                     </dl>
