--- a/src/main/resources/templates/about/list.html
+++ b/src/main/resources/templates/about/list.html
@@ -1,121 +1,82 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="common::headr('关于我们')"></head>
-<body>
-<div class="layui-container">
-    <div class="layui-row" style="margin-top: 10px;">
-        <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
-            <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-                <legend>牧户信息</legend>
-            </fieldset>
-            <form class="layui-form" th:object="${traceHerdsmen}">
-                <div class="layui-form-item">
-                    <label class="layui-form-label">名称</label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{name}" readonly autocomplete="off" class="layui-input">
+    <head th:replace="common::headr('角色列表')"></head>
+    <body>
+        <div class="layui-container">
+            <div class="layui-row">
+                <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
+                    <div class="layui-collapse">
+                        <div class="layui-colla-item">
+                            <h2 class="layui-colla-title">条件查询</h2>
+                            <div class="layui-colla-content layui-show">
+
+                                <form class="layui-form">
+                                    <div class="layui-row">
+                                        <div class="layui-col-xs3 layui-col-sm3 layui-col-md3">
+                                            <div class="layui-form-item">
+                                                <label class="layui-form-label">标题</label>
+                                                <div class="layui-input-block">
+                                                    <input type="text" name="name" placeholder="请输入名称" autocomplete="off" class="layui-input">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="layui-col-xs3 layui-col-sm3 layui-col-md3">
+                                            <div class="layui-form-item">
+                                                <label class="layui-form-label">是否发布</label>
+                                                <div class="layui-input-block">
+                                                    <select name="type" lay-filter="selectOrgFilter">
+                                                        <option value="">请选择</option>
+                                                        <option value="0">未发布</option>
+                                                        <option value="1">已发布</option>
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="layui-col-xs3 layui-col-sm3 layui-col-md3">
+                                            <div class="layui-form-item">
+                                                <label class="layui-form-label">创建时间段</label>
+                                                <div class="layui-input-block">
+                                                    <input type="text" name = "startTime" placeholder="开始时间" autocomplete="off" class="layui-input" id="startTime">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="layui-col-xs2 layui-col-sm2 layui-col-md2">
+                                            <input type="text" name="endTime" placeholder="结束时间" autocomplete="off" class="layui-input" id="endTime">
+                                        </div>
+                                    </div>
+                                    <div class="layui-row">
+                                        <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
+                                            <div class="layui-form-item">
+                                                <div class="layui-input-block">
+                                                    <button class="layui-btn" lay-submit lay-filter="searchFrom"><i class="layui-icon layui-icon-search" title="搜索"></i>搜索</button>
+                                                    <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">电话</label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{phone}" readonly autocomplete="off" class="layui-input">
-                    </div>
+            </div>
+            <div class="layui-row">
+                <div class="layui-col-xs12 layui-col-sm12 layui-col-md12">
+                    <table id="table" lay-filter="tableFilter"></table>
                 </div>
-            </form>
-            <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-                <legend>芯片信息</legend>
-            </fieldset>
-            <form class="layui-form" th:object="${traceChip}">
-                <div class="layui-form-item">
-                    <label class="layui-form-label">芯片号</label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{chipId}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">芯片类型</label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{type}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">品种</label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{varieties}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">性别</label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{sex}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">植入时间</label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{implantationtime}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-            </form>
-            <fieldset class="layui-elem-field layui-field-title" style="margin-top: 30px;">
-                <legend>繁育信息</legend>
-            </fieldset>
-            <form class="layui-form" th:object="${traceBreed}">
-                <div class="layui-form-item">
-                    <label class="layui-form-label">芯片号</label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{chipId}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">繁育类型</label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{breedType}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">精子（细管号）</label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{spermNo}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">生产厂家情况 </label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{manufacturerInfo}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">生产日期 </label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{productionDate}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">公牛/公羊品种 </label>
-                    <div class="layui-input-block">
-                        <input type="text" th:field="*{maleVarieties}" readonly autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <button lay-submit lay-filter="submitFrom" style="display: none;">提交</button>
-            </form>
+            </div>
         </div>
-    </div>
-</div>
 
-<script>
-    layui.use('core', function(){
-        var form = layui.form,
-            core = layui.core,
-            $ = layui.jquery;
+        <script type="text/html" id="titleToolbar">
+            <div class="layui-btn-container">
+                <button class="layui-btn layui-btn-sm" lay-event="add"><i class="layui-icon layui-icon-add-circle" title="添加"></i>添加</button>
+            </div>
+        </script>
 
-        form.on('submit(submitFrom)', function(data){
-            parent.layer.msg('操作成功',core.showtime);
-            var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
-            parent.layer.close(index); //再执行关闭
-            return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
-        });
-    });
-</script>
-</body>
+        <script type="text/html" id="rowToolBar">
+            <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit" title="编辑"></i></a>
+            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete" title="删除"></i></a>
+        </script>
+        <script type="text/javascript" th:src="@{/static/js/about/about.js}"></script>
+    </body>
 </html>
