--- a/src/main/resources/templates/about/list.html
+++ b/src/main/resources/templates/about/list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="common::headr('角色列表')"></head>
+    <head th:replace="common::headr('关于列表')"></head>
     <body>
         <div class="layui-container">
             <div class="layui-row">
