--- a/src/main/resources/templates/exhibitioninfo/input2.html
+++ b/src/main/resources/templates/exhibitioninfo/input2.html
@@ -9,37 +9,37 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">管理人员</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{name}" required  readonly autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{name}" required  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">身份证</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{idcard}" required  readonly autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{idcard}" required  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">手机</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{phone}" required  readonly autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{phone}" required  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">座机</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{tel}" required  readonly autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{tel}" required  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">企业名称</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{enterprisename}" readonly autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{enterprisename}" required autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label">展位号</label>
                         <div class="layui-input-block">
-                            <input type="text" th:field="*{boothno}" required  readonly autocomplete="off" class="layui-input">
+                            <input type="text" th:field="*{boothno}" required  autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-form-item">
