参展商添加公司网址

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -28,7 +28,7 @@
                 <li class="layui-nav-item">
                     <a class="" href="javascript:;">系统管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="100" menuurl='<iframe src="/crmUser/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户管理</a></dd>
+                        <dd><a href="javascript:;" menuid="100" menuurl='<iframe src="/platform/crmUser/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户管理</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
