--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -63,14 +63,15 @@
                         <dd><a href="javascript:;" menuid="501" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户协议</a></dd>
                         <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>社区规范</a></dd>
                         <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>隐私条款</a></dd>
+                        <dd><a href="javascript:;" menuid="601" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>认证提示</a></dd>
+                        <dd><a href="javascript:;" menuid="99" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户协议</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">资料管理</a>
+                    <a href="javascript:;">资料下载</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" menuid="600" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>认证提示</a></dd>
-                        <dd><a href="javascript:;" menuid="99" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>用户协议</a></dd>
-                        <dd><a href="javascript:;" menuid="99" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>展会中英文邀请函</a></dd>
+                        <dd><a href="javascript:;" menuid="600" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>企业授权书模板</a></dd>
+                        <dd><a href="javascript:;" menuid="601" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>展会中英文邀请函</a></dd>
                         <dd><a href="javascript:;" menuid="1010" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>参展合约</a></dd>
                         <dd><a href="javascript:;" menuid="1111" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>参展商手册</a></dd>
                         <dd><a href="javascript:;" menuid="1212" menuurl='<iframe src="http://localhost:8400/manager/positionList" width="100%" height="440px;" frameborder="0"></iframe>'>搭建商手册</a></dd>
