补充信息中添加发送邮箱验证码接口

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -45,7 +45,7 @@
                         <dd><a href="javascript:;" menuid="300" menuurl='<iframe src="/platform/label/list" width="100%" height="440px;" frameborder="0"></iframe>'>标签管理</a></dd>
                         <dd><a href="javascript:;" menuid="301" menuurl='<iframe src="/platform/hottitle/list" width="100%" height="440px;" frameborder="0"></iframe>'>热搜词管理</a></dd>
                         <dd><a href="javascript:;" menuid="302" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>虚拟展厅推荐</a></dd>
-                        <dd><a href="javascript:;" menuid="303" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>行业资讯推荐</a></dd>
+                        <dd><a href="javascript:;" menuid="303" menuurl='<iframe src="/chip/list" width="100%" height="440px;" frameborder="0"></iframe>'>行业资讯</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -68,7 +68,7 @@
                     </dl>
                 </li>
                 <li class="layui-nav-item">
-                    <a href="javascript:;">资料下载</a>
+                    <a href="javascript:;">资料上传</a>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" menuid="600" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>企业授权书模板</a></dd>
                         <dd><a href="javascript:;" menuid="601" menuurl='<iframe src="http://localhost:8400/manager/userList" width="100%" height="440px;" frameborder="0"></iframe>'>展会中英文邀请函</a></dd>
